#117 | unit test coverage for the user-service