@@ -392,6 +392,7 @@
                         <argLine>
                             @{argLine}
                             -XX:+EnableDynamicAgentLoading
+                            -Dnet.bytebuddy.experimental=true
                             --add-opens java.base/java.lang=ALL-UNNAMED
                             --add-opens java.base/java.util=ALL-UNNAMED
                             --add-opens java.base/java.lang.reflect=ALL-UNNAMED
